--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="row " id="section">
               <div class="col-md-12 text-center p-0 " >
-                  <h2 class=" header-2 bg-secondary text-white mb-0 p-4 " >Our Work</h2>
+                  <h2 class=" header-2 bg-dark text-white mb-0 p-4 " >Our Work</h2>
                   
                   <img class="img-fluid" src="https://source.unsplash.com/1600x900/?nature,water" alt="">
 
